@@ -9,8 +9,8 @@ CLEANFILES = *.$(F90_MODULE_EXTENSION) $(BUILT_SOURCES) f90_dep.mak
 
 eismint3_glide_SOURCES = eismint3_glide.F90 eismint3_forcing.F90 eismint3_types.F90 eismint3_io.F90
 eismint3_glide_LDADD = $(top_builddir)/libglint/libglint.la  $(top_builddir)/libglide/libglide.la \
-                       $(top_builddir)/libglimmer-solve/libglimmer-solve.la \
-                       $(top_builddir)/libglimmer/libglimmer-IO.la $(top_builddir)/libglimmer/libglimmer.la \
+                       $(top_builddir)/libglimmer/libglimmer-IO.la \
+                       $(top_builddir)/libglimmer/libglimmer.la $(top_builddir)/libglimmer-solve/libglimmer-solve.la \
                        $(NETCDF_LDFLAGS) $(HDF5_LDFLAGS) $(NETCDF_LIBS) $(BLAS_LIBS)
 
 AM_FCFLAGS = $(NETCDF_FCFLAGS)  $(F90_MODFLAG)$(top_builddir)/libglimmer-solve $(F90_MODFLAG)$(top_builddir)/libglide \
