@@ -12,8 +12,9 @@ CLEANFILES = *.$(F90_MODULE_EXTENSION) $(BUILT_SOURCES) f90_dep.mak
 
 libverif_la_SOURCES = verif.F90 verifBC.F90 verifD.F90 verif_io.F90
 verif_glide_SOURCES = verif_glide.F90
-verif_glide_LDADD = $(top_builddir)/libglide/libglide.la $(top_builddir)/libglimmer-solve/libglimmer-solve.la \
-                    $(top_builddir)/libglimmer/libglimmer-IO.la $(top_builddir)/libglimmer/libglimmer.la libverif.la \
+verif_glide_LDADD = libverif.la \
+                    $(top_builddir)/libglide/libglide.la $(top_builddir)/libglimmer/libglimmer-IO.la \
+                    $(top_builddir)/libglimmer/libglimmer.la $(top_builddir)/libglimmer-solve/libglimmer-solve.la \
                     $(NETCDF_LDFLAGS) $(HDF5_LDFLAGS) $(NETCDF_LIBS) $(BLAS_LIBS)
 
 AM_FCFLAGS = $(NETCDF_FCFLAGS) $(F90_MODFLAG)$(top_builddir)/libglimmer-solve $(F90_MODFLAG)$(top_builddir)/libglide $(F90_MODFLAG)$(top_builddir)/libglimmer
